[gd_scene load_steps=2 format=3 uid="uid://booq71g6iyumj"]

[ext_resource type="Script" path="res://addons/mpf-gmc/slides/service/switch_test.gd" id="1"]

[node name="switch_test" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Most Recent Switch:"

[node name="last_switch_label" type="Label" parent="."]
layout_mode = 2

[node name="last_switch_address" type="Label" parent="."]
layout_mode = 2

[node name="last_switch_state" type="Label" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Active Switches:"

[node name="active_switches" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Recent Switches:"

[node name="recent_switches" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2
